# MiniSat

./: CMakeLists.txt  starexec_build  starexec_clean  starexec_description.txt
core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
simp/: Main.cc  SimpSolver.cc
utils/: System.cc
